test/domains/bradc/clearArithmetic.good
clearArithmetic.chpl:10: error: Cannot clear an arithmetic domain
